--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: go
 
 go:
+  - 1.6
   - 1.7
   - 1.8
   - 1.9
+  - master
+
+install: true
+
+matrix:
+  allow_failures:
+    - go: master
+  fast_finish: true
+
+notifications:
+  email: false
 
 script:
   - go test -race -coverprofile=coverage.txt -covermode=atomic
